<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background9"
    android:onClick="identifyButton"
    tools:context=".IdentifyCarMake">

    <ImageView
        android:id="@+id/identify_brand_image_view"
        android:layout_width="297dp"
        android:layout_height="256dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image_of_the_car"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <Spinner
        android:id="@+id/selected_brand_spinner"
        style="@style/Widget.AppCompat.Spinner.DropDown.ActionBar"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:background="#680E1853"
        android:backgroundTint="#44E9FF"
        android:popupBackground="#AEE0E1E3"
        android:spinnerMode="dropdown"
        android:textColor="#7BA0B1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerLabel" />

    <Button
        android:id="@+id/identify_brand_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:onClick="identifyButton"
        android:text="@string/identify"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="299dp"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        android:text="@string/guess_the_car_brand"
        android:textAlignment="center"
        android:textColor="#A9C3CF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/answerLabel"
        android:layout_width="251dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/view_result"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#990EA0EF"
        android:textDirection="firstStrong"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identify_brand_image_view" />

    <TextView
        android:id="@+id/correctAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/identify_answer"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_brand_spinner" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="66dp"
        android:layout_height="47dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="44dp"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>