<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background9"
    tools:context=".AdvancedLevelActivity">

    <TextView
        android:id="@+id/advanced_level_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/advanced_level_title"
        android:textColor="#A9C3CF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_car1"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/car_imageview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/advanced_level_title" />

    <ImageView
        android:id="@+id/imageView_car2"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/car_imageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_text_1" />

    <ImageView
        android:id="@+id/imageView_car3"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="28dp"
        android:contentDescription="@string/car_imageview"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_text_2"
        app:layout_constraintVertical_bias="0.222" />

    <EditText
        android:id="@+id/second_car"
        android:layout_width="154dp"
        android:layout_height="42dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        android:background="#4B77C2CC"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#EFE9E9"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_car1" />

    <EditText
        android:id="@+id/third_car"
        android:layout_width="155dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="#4B77C2CC"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#EFE9E9"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_car2" />

    <EditText
        android:id="@+id/first_car"
        android:layout_width="154dp"
        android:layout_height="42dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="28dp"
        android:background="#77C2CC"
        android:backgroundTint="#4B77C2CC"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#EFE9E9"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreDisplay" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:onClick="submit"
        android:text="@string/submit_brand_button"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/scoreDisplay"
        android:layout_width="67dp"
        android:layout_height="0dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="20dp"
        android:textColor="#75ACB3"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/answerStatusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/answer_text_1"
        android:layout_width="154dp"
        android:layout_height="23dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:textColor="#FFEB3B"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_car1"
        app:layout_constraintTop_toBottomOf="@+id/first_car" />

    <TextView
        android:id="@+id/answer_text_2"
        android:layout_width="149dp"
        android:layout_height="23dp"
        android:layout_marginTop="13dp"
        android:textColor="#FFEB3B"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/imageView_car2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_car" />

    <TextView
        android:id="@+id/answer_text_3"
        android:layout_width="154dp"
        android:layout_height="23dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:textColor="#FFEB3B"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView_car3"
        app:layout_constraintTop_toBottomOf="@+id/third_car" />

    <TextView
        android:id="@+id/advance_timer_text"
        android:layout_width="76dp"
        android:layout_height="66dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="44dp"
        android:textColor="#EDE5E5"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>